# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

## [0.0.5] - 2019-11-06

### Fixed

- Target frame right click menu now works correctly

## [0.0.4] - 2019-11-06

### Added

- Player Cast bar, timer, name
- Player frame dividers for mp6/castbar
- More animations
- Speed limit for animations

### Changed

- Target text now reads "Name Level"

### Fixed

- Warrior icon texture now has an alpha

## [0.0.3] - 2019-11-06

### Added

- Created an animation library (makes animations way easier)
- MP6* Bar

## [0.0.2] - 2019-11-05

### Fixed

- Target bars can be right clicked for dropdownmenu

## [0.0.1] - 2019-11-05

### Added

- Player health bar
- Player mana/energy/rage bars
- Player health/power text
- Target health bar
- Target mana/energy/rage bars
- Target class icons (rough needs refinement)
- Target name/level/classification text
- Target difficulty text colors
